Nuevo logo de AGRO RURAL

--- a/wp-content/themes/inclusiva/assets/styles/layouts/_header.scss
+++ b/wp-content/themes/inclusiva/assets/styles/layouts/_header.scss
@@ -247,7 +247,7 @@ h1{
 			display: block;
 			width: 140px!important;
   			height: 55px!important;
-  			background-image: url(../images/logo--sm.png)!important;
+  			background-image: url(../images/logo--sm.jpg)!important;
   			span{
   				position: relative;
 			  	display: block;
