--- a/wp-content/themes/inclusiva/assets/styles/layouts/_pages.scss
+++ b/wp-content/themes/inclusiva/assets/styles/layouts/_pages.scss
@@ -123,7 +123,7 @@
 							a{
 								color: $gray-light;
 								&:hover{
-									color: $gray;
+									color: $red--google;
 								}
 							}
 							ul{
