--- a/wp-content/themes/inclusiva/assets/styles/layouts/_archives.scss
+++ b/wp-content/themes/inclusiva/assets/styles/layouts/_archives.scss
@@ -3,10 +3,7 @@
 		.masshead{
 			background-image: url('../images/masshead--servicios.jpg') !important;
 			@include full-bg();
-			.page-header{
-				margin: 0 auto;
-				padding: 0;
-			}
+			.page-header{}
 		}
 		.wrapper{
 		@include make-row();
