Servicios de AGRO RURAL 2

--- a/wp-content/themes/inclusiva/assets/styles/layouts/_pages.scss
+++ b/wp-content/themes/inclusiva/assets/styles/layouts/_pages.scss
@@ -172,10 +172,7 @@
 			background-image: url(../images/masshead--servicios.jpg);
 			-webkit-background-size: cover;
 			background-size: cover;
-			.page-header {
-				margin: 0 auto;
-				padding: 0;
-			}
+			.page-header {}
 		}
 	}
 	&.consulta-de-compra-de-guano-de-la-isla{
