--- a/wp-content/themes/inclusiva/assets/styles/layouts/_header.scss
+++ b/wp-content/themes/inclusiva/assets/styles/layouts/_header.scss
@@ -1,7 +1,10 @@
 /* Begin Super Header */
 header{
+	&.super-header, &.banner{
+		@include gradient-horizontal( $green, $green--light, 0%, 100%);
+	}
+	 
 	&.super-header{
-		@include gradient-horizontal( $green, $green--light, 0%, 100%); 
 		border-bottom: 1px solid transparent;
 		.collapse{
 			display: block;
@@ -129,13 +132,13 @@ header{
 	}
 
 	&.navbar-main{
-		@include gradient-horizontal( $brown, $brown--light--1, 0%, 100%); 
 		border-color: $brown;
 		margin-bottom: 0;
+		z-index: 100;
 		.navbar-header{
 			button{
 				padding: 5px 10px;
-				border-color: $brown--lighter;
+				border-color: transparent;
 				@include border-radius(0);
 				.icon{
 					color: $brown--lighter;
@@ -162,7 +165,32 @@ header{
 		}
 		nav{
 			border-color: transparent !important;
-			.navbar-form{
+		}
+	}
+
+	&.navbar-branding {
+  		background-color: $white;
+  		border-color: $white;
+  		margin-bottom: 0;
+  		z-index: 1001;
+  		.container{
+  			padding-top: 15px;
+  			padding-bottom: 15px;
+  			.navbar-header, .navbar-form{
+  				@include make-sm-column(4);
+  				float: none;
+  			}
+  			.navbar-header{
+  				&.agrorural{
+  					.navbar-brand{
+  						float: none;
+  						a{
+  							margin: 0 auto;
+  						}
+  					}
+  				}
+  			}
+  			.navbar-form{
 				border-color: transparent !important;
 				form{
 					position: relative;
@@ -218,19 +246,6 @@ header{
 					}
 				}
 			}
-		}
-	}
-
-	&.navbar-branding {
-  		background-color: $white;
-  		border-color: $white;
-  		margin-bottom: 0;
-  		.container{
-  			padding-top: 15px;
-  			padding-bottom: 15px;
-  			nav{
-  				padding-top: 10px;
-  			}
   		}
 	}
 }
