--- a/wp-content/themes/inclusiva/assets/styles/layouts/_home.scss
+++ b/wp-content/themes/inclusiva/assets/styles/layouts/_home.scss
@@ -206,10 +206,10 @@
 				@include make-lg-column(12);
 				.page-header{
 					margin: 0;
-					border-bottom: 1px solid $green;
+					border-bottom: 1px solid $gray;
 					h3{
 						margin-top: 0;
-						color: $green;
+						color: $gray;
 					}
 				}
 				.tabbable.tabs-left{
@@ -219,7 +219,7 @@
 						@include make-sm-column(2);
 						@include make-xs-column(2); 
 						margin-right: 0;
-						border-right: 1px solid $green;
+						border-right: 1px solid $gray;
 						padding-right: 0;
 						li{
 							a{
@@ -228,7 +228,7 @@
 								border: 1px solid transparent;
 								margin-bottom: 2px;
 								&:hover{
-									background-color: $green--light;
+									background-color: $gray-light;
 								}
 							}
 							&.active{
