--- a/wp-content/themes/inclusiva/assets/styles/common/_global.scss
+++ b/wp-content/themes/inclusiva/assets/styles/common/_global.scss
@@ -326,11 +326,7 @@ article, figure{
   }
 
   .wrap{
-    margin-top: 30px !important;
-    main{}
-    aside{
-
-    }
+    padding-top: 30px !important;
   }
 
 /* Páginas Especiales */
