--- a/wp-content/themes/inclusiva/assets/styles/common/_global.scss
+++ b/wp-content/themes/inclusiva/assets/styles/common/_global.scss
@@ -141,6 +141,17 @@ p{
   }
 }
 
+.popover{
+  ul{
+    li{
+      a{
+        position: relative;
+        display: block;
+      }
+    }
+  }
+}
+
 /* Format Icons*/
 .icon {
   @include fa-icon();
