--- a/wp-content/plugins/megamenu/css/admin/menus.css
+++ b/wp-content/plugins/megamenu/css/admin/menus.css
@@ -705,10 +705,12 @@
 #cboxContent .general_settings table td {
 	padding-bottom: 5px;
 }
-#cboxContent h4.first {
+#cboxContent form > h4.first,
+#cboxContent .mm_content > h4.first {
 	margin: 0em 0 0.7em 0;
 }
-#cboxContent h4 {
+#cboxContent form > h4,
+#cboxContent .mm_content > h4 {
 	clear: both;
 	border-bottom: 1px solid #bfbfbf;
 	padding: 0 0 10px 0;
@@ -1018,4 +1020,9 @@
 		-webkit-transform: rotate(359deg);
 		transform: rotate(359deg);
 	}
+}
+
+/* Fix Image Widget Deluxe */
+#cboxContent div[id^=rommeled_image] .non-sortable {
+    display: block !important;
 }
