Mejorando el Pack Anticorrupcion

--- a/wp-content/themes/inclusiva/assets/styles/layouts/_pages.scss
+++ b/wp-content/themes/inclusiva/assets/styles/layouts/_pages.scss
@@ -195,12 +195,75 @@
 					h2{
 						@include opensans(light);
 						font-size: 14px;
+						a{
+							color: $gray-dark;
+							&:hover{
+								color: $red--google--hover;
+							}
+						}
 						@media(min-width: $screen-sm-min){
-							font-size: 24px;
+							font-size: 18px;
 						}
 					}
-					.entry{
-						display: none;
+					.caption{
+						background-color: $white;
+						margin: 75px auto 0;
+						text-align: center;
+						padding: 0;
+						.icon{
+						    position: absolute;
+						    top: 25px;
+						    left: 0;
+						    right: 0;
+						    @include fa-icon();
+						    font-size: 36px;
+						    color: white;
+						}
+						h2{
+							margin: 0;
+							a{
+								display: block;
+								padding: 20px;
+							}
+						}
+						.entry{
+							display: none;
+						}
+					}
+					&.autoevaluacion-transparencia{
+						.icon{
+							&:before{
+								content: $fa-var-check-square-o;
+							}
+						}
+					}
+					&.control-gubernamental{
+						.icon{
+							&:before{
+								content: $fa-var-search;
+							}
+						}
+					}
+					&.declaraciones-juradas{
+						.icon{
+							&:before{
+								content: $fa-var-file-text-o;
+							}
+						}
+					}
+					&.rendicion-de-cuentas{
+						.icon{
+							&:before{
+								content: $fa-var-desktop;
+							}
+						}
+					}
+					&.control-interno, &.control-previo{
+						.icon{
+							&:before{
+								content: $fa-var-tasks;
+							}
+						}
 					}
 				}
 			}
