Mejora de URL de documentos

--- a/wp-content/themes/inclusiva/assets/styles/common/_global.scss
+++ b/wp-content/themes/inclusiva/assets/styles/common/_global.scss
@@ -616,6 +616,8 @@ article{
   .cta__link{
     margin: 0;
     padding: 12px 0;
+    border: 0 none;
+    background-color: transparent;
   }
   .sharing-list{
     margin-top: 4px;
