Rendicion de cuentas 1

--- a/wp-content/themes/inclusiva/assets/styles/common/_global.scss
+++ b/wp-content/themes/inclusiva/assets/styles/common/_global.scss
@@ -697,6 +697,11 @@ article{
       }
       th{
        @include opensans(semibold);
+       span{
+         @include opensans(regular);
+         font-size: 12px;
+         font-weight: normal;
+       }
       }
       td{
         font-size: 12px;
